k8s/applications/web/gramps-web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramps-web
  namespace: gramps-web
spec:
  selector:
    app: gramps-web
  ports:
    - name: http
      port: 5000
      targetPort: http
