k8s/applications/web/gramps-web/valkey-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramps-web-valkey
  namespace: gramps-web
spec:
  selector:
    app: gramps-web-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
