k8s/applications/web/gramps-web/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gramps-web
  namespace: gramps-web
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - gramps.eudald.gr
  rules:
  - backendRefs:
    - name: gramps-web
      port: 5000
